# prime-agent

./: AGENTS.md  Cargo.toml  PLAN.md  README.md
scripts/: install.sh
src/: cli.rs  config.rs  lifecycle.rs  logging.rs  main.rs  plan.rs  state.rs  steps.rs  sync.rs  version.rs
tests/: cli.rs
